k8s/gatewayapi/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass

metadata:
  name: envoy-gateway

spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
