k8s/gatewayapi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: adminer-route
  namespace: default

spec:
  parentRefs:
  - name: adminer-gateway

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: adminer-service
      port: 80
